name:           bindings-llvm
version:        0.1
author:         Henning Günther
cabal-version:  >= 1.24
build-type:     Custom

custom-setup
  setup-depends: base,Cabal,filepath,directory,time,process

flag shared-llvm
  description: Link against shared LLVM library
  default: False

library
  build-tools:    cpphs,llvm-config
  build-depends: base,tagged>=0.4,unix,containers
  includes:             
    wrapper/extra.h
    wrapper/HaskellPass.h
  include-dirs:         wrapper .
  extra-libraries:      stdc++,z
  c-sources:
    wrapper/extra.cpp
    wrapper/HaskellPass.cpp
  ghc-options: -cpp -pgmPcpphs -optP--cpp
  default-extensions:
    ForeignFunctionInterface
    CApiFFI
    MultiParamTypeClasses
    FlexibleInstances
    TypeFamilies
    DeriveDataTypeable
    DoAndIfThenElse
    ViewPatterns
  default-language: Haskell2010
  exposed-modules:
    LLVM.FFI
    LLVM.FFI.StringRef
    LLVM.FFI.ErrorCode
    LLVM.FFI.ErrorOr
    LLVM.FFI.OOP
    LLVM.FFI.Type
    LLVM.FFI.Context
    LLVM.FFI.Module
    LLVM.FFI.MemoryBuffer
    LLVM.FFI.OwningPtr
    LLVM.FFI.SMDiagnostic
    LLVM.FFI.Value
    LLVM.FFI.Metadata
    LLVM.FFI.User
    LLVM.FFI.IPList
    LLVM.FFI.Function
    LLVM.FFI.BasicBlock
    LLVM.FFI.Instruction
    LLVM.FFI.Constant
    LLVM.FFI.ArrayRef
    LLVM.FFI.DebugLoc
    LLVM.FFI.Use
    LLVM.FFI.APFloat
    LLVM.FFI.APInt
    LLVM.FFI.PassManager
    LLVM.FFI.Pass
    LLVM.FFI.PassManagerBuilder
    LLVM.FFI.PassInfo
    LLVM.FFI.SetVector
    LLVM.FFI.Transforms.Analysis
    LLVM.FFI.Transforms.Scalar
    LLVM.FFI.Transforms.IPO
    LLVM.FFI.OStream
    LLVM.FFI.AliasAnalysis
    LLVM.FFI.Twine
    LLVM.FFI.Loop
    LLVM.FFI.CPP
    LLVM.FFI.Pass.Haskell
    LLVM.FFI.SmallVector
    LLVM.FFI.GenericValue
    LLVM.FFI.ExecutionEngine
    LLVM.FFI.MachineCodeInfo
    LLVM.FFI.EngineBuilder
    LLVM.FFI.Target
    LLVM.FFI.Targets
    LLVM.FFI.TargetRegistry
    LLVM.FFI.TargetMachine
    LLVM.FFI.Linker
    LLVM.FFI.CPP.String
    LLVM.FFI.Triple
    LLVM.FFI.Attributes
    LLVM.FFI.CPP.UniquePtr
    LLVM.FFI.PassRegistry
    LLVM.FFI.ValueMap
    LLVM.FFI.Cloning
  other-modules:
    LLVM.FFI.Interface

test-suite test-llvm
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends: base,bindings-llvm
  ghc-options: -cpp -pgmPcpphs -optP--cpp